# pad

./: .hgignore  AsioUtil.cpp  AsioUtil.h  CMakeLists.txt  FindJack.cmake  HostAPI.cpp  HostAPI.h  PAD.cpp  PAD.h  PADConfig.cmake  PADErrors.h  WinDebugStream.h  pad.cpp  pad.h  pad_asio.cpp  pad_channels.h  pad_coreaudio.cpp  pad_errors.h  pad_jack.cpp  pad_o2.cpp  pad_samples.h  pad_samples_avx.h  pad_samples_sse2.cpp  pad_samples_sse2.h  pad_wasapi.cpp  pad_wasapi2.cpp  readme.txt  test1.cpp  wasapi.cpp
cog/: cog.h
msvc/PADTest/: PADTest.sln  PADTest.vcxproj  PADTest.vcxproj.filters
tests/minimaltest/: main.cpp
utils/: pad_com_smartpointer.h  resourcemanagement.h
xcode/PAD/PAD/: PAD-Info.plist  PAD-Prefix.pch  pad_coreaudio.cpp
xcode/PAD/PAD.xcodeproj/: project.pbxproj
xcode/PAD/PAD.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/PAD/PAD.xcodeproj/project.xcworkspace/xcuserdata/vnorilo.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/PAD/PAD.xcodeproj/xcuserdata/vnorilo.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
xcode/PAD/PAD.xcodeproj/xcuserdata/vnorilo.xcuserdatad/xcschemes/: PAD.xcscheme  padtest.xcscheme  xcschememanagement.plist
xcode/PAD/padtest/: padtest.1
